--- a/index.Rmd
+++ b/index.Rmd
@@ -12,49 +12,42 @@ description: |
   The HTML output format for this example is bookdown::gitbook,
   set in the _output.yml file.
 link-citations: yes
-github-repo: rstudio/bookdown-demo
+github-repo: ronanhart/R_spatial_workshop
 ---
 
-# About
+# Welcome to the Ecology Center's Workshop on R Spatial! 
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports; for example, a math equation $a^2 + b^2 = c^2$.
+In this workshop we will cover: 
 
-## Usage 
+* GIS Basics
+* Vectors & Rasters and how to manipulate them in R
+* three
 
-Each **bookdown** chapter is an .Rmd file, and each .Rmd file can contain one (and only one) chapter. A chapter *must* start with a first-level heading: `# A good chapter`, and can contain one (and only one) first-level heading.
+We will **NOT** be covering how to make a nice-looking map (for figures, presentations, etc.) That will be covered in the next workshop, so be sure to keep an eye out for that if you want to learn how to make maps in R!
 
-Use second-level and higher headings within chapters like: `## A short section` or `### An even shorter section`.
+**Goals of this workshop:**
 
-The `index.Rmd` file is required, and is also your first book chapter. It will be the homepage when you render the book.
+* Reiterate the basics of GIS
+* Teach you the processes that you might have learned in ArcGIS or other GIS software that you can code yourself in R
 
-## Render book
+## Why GIS in R?
 
-You can render the HTML version of this example book without changing anything:
+You may be asking why you even need to learn how to code spatial processes in R, especially if you already know how to use ArcGIS. (Well, maybe you're not actually asking that question if you’re taking this class.) But here are a few reasons why:
 
-1. Find the **Build** pane in the RStudio IDE, and
+* Free
+  + you most often need to pay companies to use their GIS software (or be a           student to use a university's license). What happens when you're no longer a      student nor hired by a company/organization that already has a license?
+* Reproducible
+  + Some journals require you to publish your code alongside your manuscript
+  + If you are collaborating on a project, you can 
+* Open-Source
+  + company-owned software is often hidden behind a "black box" so you might not be 100% certain what a function or tool is doing. 
+  + Functions in R are completely open to the public so you can be certain that a function is doing what you think it's doing
+* Customizable
+  + You can write your code to suit your specific problem and answer your specific questions 
+  + You can write custom functions and loops so that you can repeat processes on multiple features and rasters without having to copy and paste code 
 
-1. Click on **Build Book**, then select your output format, or select "All formats" if you'd like to use multiple formats from the same book source files.
+Reproducibility and customization are not unique to R but rather an advantage to using code for GIS in general. In a few weeks there will be a workshop on coding in python for GIS tools, which is just as useful (especially because you can use the package `arcpy` in python to code directly to ArcGIS), so I also recommend taking that workshop if you’re interested.
 
-Or build the book from the R console:
+Not to say that programs such as ArcGIS should never be used. On the contrary, since it was the way I first learned GIS, I will sometimes return to it to make a map on the fly or quickly visualize and double-check a polygon or raster. All programs have their pros and cons, and this workshop is to simply add another tool in your spatial analysis toolbox. 
 
-```{r, eval=FALSE}
-bookdown::render_book()
-```
-
-To render this example to PDF as a `bookdown::pdf_book`, you'll need to install XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
-
-## Preview book
-
-As you work, you may start a local server to live preview this HTML book. This preview will update as you edit the book when you save individual .Rmd files. You can start the server in a work session by using the RStudio add-in "Preview book", or from the R console:
-
-```{r eval=FALSE}
-bookdown::serve_book()
-```
-
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
+So let's get started!
